# gentle

./: CMakeLists.txt  Makefile  README.md  bugs and comments.txt  furniture  game.cpp  main  main.cpp  old.main.cpp  otherTest.scene  skeleton.cpp  tile_editor  tile_editor.cpp  todo.txt
headers/: animation.h  audio_source.h  button.h  canvas.h  game_object.h  gameobject.h  image.h  input_field.h  particle.h  physics_object.h  player.h  scene.h  text.h  texture.h  tile.h  tile_map.h  timer.h  ui_object.h  ui_panel.h  ui_state_object.h
headers/editor/: explorer.h  heirarchy.h  inspector.h
headers/game/: box.h  cursor.h  furniture.h  game.h  harold.h  house_generator.h  (+2 more)
resources/: black.aseprite  buttonsheet-middle.aseprite  buttonsheet.aseprite  dkg.map  dkg2.map  dotanim.aseprite  dotanim2.aseprite  dotanim3.aseprite  dotanim4.aseprite  empty.map  explorer.aseprite  fileSheet.aseprite  folder.aseprite  folderSheet.aseprite  gameobject.aseprite  gameobject2.aseprite  hand-closed.aseprite  hand-point.aseprite  hand.aseprite  harold-anim-down.aseprite  harold-anim-left.aseprite  harold-anim-right.aseprite  harold-anim-up.aseprite  heirarchy.aseprite  inspector.aseprite  lazy.map  paper.aseprite  scoreboard.txt  scroll.aseprite  test.scene  tilesheet.aseprite  tutorial.aseprite
sources/: animation.cpp  audio_source.cpp  button.cpp  canvas.cpp  game_object.cpp  gameobject.cpp  image.cpp  input_field.cpp  particle.cpp  physics_object.cpp  player.cpp  scene.cpp  text.cpp  texture.cpp  tile.cpp  tile_map.cpp  timer.cpp  ui_object.cpp  ui_panel.cpp  ui_state_object.cpp
(+29 files in other folders)
